# scbridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREATE_PACKAGE_FILES.md  IMPLEMENTATION_SUMMARY.md  PACKAGE_COMPLETE.md  README.md  RELEASE_GUIDE.md
.github/workflows/: python-test.yml  r-check.yml
R/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/R/: formats.R  io.R  readers.R  sce.R  seurat.R  writers.R
R/man/: create_sce_from_components.Rd  create_seurat_from_components.Rd  extract_components_from_sce.Rd  extract_components_from_seurat.Rd  load_from_folder.Rd  load_json.Rd  load_mtx.Rd  load_parquet.Rd  read.Rd  read_components.Rd  save_json.Rd  save_mtx.Rd  save_parquet.Rd  save_to_folder.Rd  scio_read.Rd  scio_read_components.Rd  scio_write.Rd  scio_write_components.Rd  write.Rd  write_components.Rd
examples/: 01_create_sample_data.py  02_python_usage.py  03_r_usage.R  README.md  sample_data.h5ad
examples/sample_data.scio/: manifest.json  matrix.mtx  obs.parquet  uns.json
examples/sample_data.scio/layers/: normalized.mtx
examples/sample_data.scio/obsm/: X_pca.parquet  X_umap.parquet
python/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_scio.py
python/scbridge/: __init__.py  _version.py  formats.py  io.py  readers.py  writers.py
python/scio/: __init__.py  _version.py  formats.py  io.py  lazy.py  readers.py  writers.py  writers.py.backup
specs/: format_v1.md
tests/: test_python.py
tests/manual/: README.md  test_backward_compat.R  test_incremental_update.R  test_seurat.R  test_write_read.R
(+2 files in other folders)
