[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scio"
version = "0.1.7"
description = "Cross-platform single-cell RNA-seq data storage for Python (AnnData) and R (Seurat/SCE)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "scio contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.8.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyarrow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/bzlee-bio/scio"
Documentation = "https://github.com/bzlee-bio/scio#readme"
Repository = "https://github.com/bzlee-bio/scio"
Issues = "https://github.com/bzlee-bio/scio/issues"

[tool.setuptools]
packages = ["scio"]
